# kernel

./: LICENSE  Makefile  meson.build
fake-glib/: glib.h
include/: draw.h  glib.h  library.h  string.h  terminal.h  vga.h
src/: boot.S  boot.s  ccode.c  ccode.vala  draw.c  io.c  io.h  kernel.vala  linker.ld  main.vala  string.c  terminal.c  timer.c  vga.c
src/lib/: string.c
src/memory/: io.c  io.vala
src/terminal/: terminal.c  terminal.vala
src/vga/: vga.c  vga.s  vga.vala
